# DataBaseLLM

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
database_llm_app/: app.py  config.py  db.py  intent_parser.py  llm.py  mcp_server.py  memory_store.py  models.py  multi_intent_splitter.py  orchestrator.py  schema_graph.py  semantic_dictionary.py  service.py  sftp_docs.py  sql_builder.py  sql_validator.py
database_llm_app/metadata/: schema_graph.json  semantic_dictionary.json
database_llm_app/ui/: chat.html
scripts/: deploy_cloud_run.sh
